Fix legend on IE11

--- a/TargetPopCompletion/style.css
+++ b/TargetPopCompletion/style.css
@@ -84,7 +84,7 @@ text-align: center;
 .legend2keycontainer{
 display: flex; 
 flex-direction: row-reverse;
-justify-content: space-evenly;  
+justify-content: space-around;  
 } 
 
 .legend2key{
