--- a/TargetPopEnrollment/style.css
+++ b/TargetPopEnrollment/style.css
@@ -85,7 +85,7 @@ text-align: center;
 .legend2keycontainer{
 display: flex; 
 flex-direction: row-reverse;
-justify-content: space-evenly;  
+justify-content: space-around;  
 } 
 
 .legend2key{
